# qiming

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml  test.yml
docs/: bench_baseline.json  fpga_gpu_asic_architecture.md  user_guide.md
example/rv32i/: asm_build.py  build_prog.py  putchar.c  rv32i.ld  rv32i_tb.v  rv32i_top.v  startup.S
example/rv32i_vhdl/: rv32i_top.vhd
libqsim/: CMakeLists.txt  uir_spec.json
libqsim/src/: elaboration.c  logger.c  scheduler.c  sdf_parse.c  session.c  sim_thread.c  simulator.c  uir.c  uir_sim.c  value.c  wave_buffer.c
libqsim/tests/: bug12.v  debug_vhdl_resolve.c  diag_rv32i_addi.c  idex_test.v  main_test.c  minunit.h  qiming_repro.c  run_perf_tests.c  rv32i_asm.py  rv32i_test_add.s  rv32i_test_alu.s  rv32i_test_branch.s  rv32i_test_fib.s  rv32i_test_jal.s  rv32i_test_lw_sw.s  test_bug12_diag.c  test_bug1_repro.c  test_bug3_debug.c  test_bugs_from_report.c  test_combi_loop.c  test_cpu_rv32i.c  test_cpu_rv32i_asm.c  test_cpu_rv32i_hex.c  test_generate.c  (+38 more)
python/: pyproject.toml
skills/: README.md  auto_debug.md  coverage_gap_fill.md  interface_check.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ffi/: mod.rs
src-tauri/src/mcp/: handler.rs  mod.rs  server.rs  tests.rs  types.rs
src-tauri/src/python/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/tests/: cpu_probe.rs  vhdl_expr_test.rs
tla/: MC.cfg  check.sh  scheduler.tla
webview/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
(+61 files in other folders)
