[package]
name = "qiming"
version = "0.1.0"
edition = "2021"

[lib]
name = "qiming_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "qiming"
path = "src/main.rs"

[[bin]]
name = "qsim"
path = "src/bin/qsim.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
